# map-boundary-builder

./: .gitignore  .vercelignore  README.md  pyproject.toml  requirements.txt  vercel.json
api/: index.py
benchmarks/: latency-rd-notes.md  real-screenshot-stress.json  service-area-fixtures.json
docs/: generalized-v11.md  index.html  styles.css  v10-training-progress.md
map_boundary_builder/: __init__.py  asset_response.py  benchmark.py  catalog_match.py  cli.py  evaluation.py  extract.py  geocoder.py  geocoder_seed.json  geojson.py  georef_transform.py  georeference.py  github_reports.py  image_io.py  model_extract.py  network_policy.py  ocr.py  osm_places.py  osm_road_points_seed.npz  osm_roads.py  pipeline_version.py  request_options.py  runner.py  runtime_config.py  runtime_warmup.py  stress_benchmark.py  synthetic_benchmark.py  upload_payload.py  web.py
map_boundary_builder/models/: synthetic_boundary_v1.onnx  synthetic_boundary_v1.onnx.data  synthetic_boundary_v10.onnx  synthetic_boundary_v11.onnx  synthetic_boundary_v2.onnx
map_boundary_builder/ocr_models/: README.md
map_boundary_builder/service_area_catalog/: ann-arbor-may-mobility.json  atlanta-waymo.json  austin-tesla.json  austin-waymo.json  (+17 more)
tests/: test_api_cache.py  test_benchmark.py  test_catalog_match.py  test_cli_profile.py  test_evaluation.py  test_extract.py  test_geocoder.py  test_github_reports.py  test_image_io.py  test_model_extract.py  test_ocr_georeference.py  test_osm_places.py  test_osm_roads.py  test_pipeline_version.py  test_reported_samples.py  test_request_options.py  test_runner_summary.py  test_runtime_warmup.py  test_stress_benchmark.py  test_synthetic_benchmark.py  test_synthetic_generator.py  test_synthetic_manifest.py  test_upload_payload.py  test_web_handler.py
tools/: train_synthetic_model.py
(+9 files in other folders)
