[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "map-boundary-builder"
version = "0.1.0"
description = "Extract georeferenced service-area polygons from map screenshots."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Ethan McKanna" },
]
keywords = ["geojson", "maplibre", "computer-vision", "openstreetmap", "ocr"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
  "cairosvg>=2.9",
  "numpy>=2.0",
  "opencv-python-headless>=4.10",
  "pillow>=10.0",
  "pyproj>=3.6",
  "rapidocr-onnxruntime>=1.4,<2.0",
  "shapely>=2.0",
]

[project.scripts]
map-boundary-builder = "map_boundary_builder.cli:main"
map-boundary = "map_boundary_builder.cli:main"
map-boundary-benchmark = "map_boundary_builder.benchmark:main"
map-boundary-web = "map_boundary_builder.web:main"

[project.urls]
Homepage = "https://map-boundary-builder.vercel.app"
Repository = "https://github.com/EthanMcKanna/map-boundary-builder"
Issues = "https://github.com/EthanMcKanna/map-boundary-builder/issues"

[[tool.uv.dependency-metadata]]
name = "rapidocr-onnxruntime"
requires-dist = [
  "pyclipper>=1.2.0",
  "numpy<3.0.0,>=1.19.5",
  "six>=1.15.0",
  "Shapely!=2.0.4,>=1.7.1",
  "PyYAML",
  "Pillow",
  "onnxruntime>=1.7.0",
  "tqdm",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["map_boundary_builder*"]

[tool.setuptools.package-data]
map_boundary_builder = ["web_assets/*"]
